Fix incompatability w/ alignwide/full styles

--- a/themes/shiro/assets/src/sass/blocks/_banner.scss
+++ b/themes/shiro/assets/src/sass/blocks/_banner.scss
@@ -1,7 +1,7 @@
 .wp-block-shiro-banner {
 	display: flex;
 	flex-direction: column-reverse;
-	width: 100%;
+	min-width: 100%;
 }
 
 .banner__content,
